# Garagem2

./: db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
Garagem2/: admin.py  apps.py  models.py  serializers.py  views.py
Garagem2/migrations/: 0001_initial.py  0002_veiculo.py  0002_veiculo_capa.py
Garagem2/models/: __init__.py  acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
Garagem2/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
Garagem2/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
